syntax = "proto3";

option java_multiple_files = true;
option java_package = "dk.via.JavaDAO.Protobuf.Users";
option csharp_namespace = "Protobuf";

package Users;


service UsersService{
  rpc GetById(UserId) returns (User){}
  rpc GetByUsername(Username) returns (User) {}
  rpc GetByUsernameAndPassword(UsernameAndPassword) returns(User) {}
  rpc GetAll(Empty) returns (UserList){}
  rpc Create(User) returns (User){}
  rpc Update(User) returns (User){}
  rpc Delete(User) returns (User){}
}
message UserId{
  int32 id = 1;
}
message Username{
  string username = 1;
}
message  UsernameAndPassword{
  string username = 1;
  string password = 2;
}

message Empty{

}

message UserList{
  repeated User users = 1;
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string streak = 5;
  string createdAt = 6;
  string updatedAt = 7;
}
